Downgrade rhino version to 1.6R6