@@ -24,10 +24,8 @@
  * Contributor(s):
  *   Norris Boyd
  *   Igor Bukanov
- *   Daniel Gredler
  *   Bob Jervis
  *   Roger Lawrence
- *   Cameron McCormack
  *   Steve Weiss
  *
  * Alternatively, the contents of this file may be used under the terms of
@@ -47,9 +45,7 @@
 package org.mozilla.javascript;
 
 import java.lang.reflect.*;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
+import java.util.Hashtable;
 import java.io.*;
 import org.mozilla.javascript.debug.DebuggableObject;
 
@@ -133,7 +129,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
     private static final Slot REMOVED = new Slot(null, 0, READONLY);
 
     static {
-        REMOVED.wasDeleted = true;
+        REMOVED.wasDeleted = 1;
     }
 
     private transient Slot[] slots;
@@ -141,14 +137,11 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
     // it indicates sealed object where ~count gives number of keys
     private int count;
 
-    // gateways into the definition-order linked list of slots
-    private transient Slot firstAdded;
-    private transient Slot lastAdded;
-
     // cache; may be removed for smaller memory footprint
     private transient Slot lastAccess = REMOVED;
 
-    private volatile Map<Object,Object> associatedValues;
+    // associated values are not serialized
+    private transient volatile Hashtable associatedValues;
 
     private static final int SLOT_QUERY = 1;
     private static final int SLOT_MODIFY = 2;
@@ -158,14 +151,14 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
 
     private static class Slot implements Serializable
     {
-        private static final long serialVersionUID = -6090581677123995491L;
+        static final long serialVersionUID = -3539051633409902634L;
+
         String name; // This can change due to caching
         int indexOrHash;
         private volatile short attributes;
-        transient volatile boolean wasDeleted;
+        transient volatile byte wasDeleted;
         volatile Object value;
-        transient volatile Slot next; // next in hash table bucket
-        transient volatile Slot orderedNext; // next in linked list
+        transient volatile Slot next;
 
         Slot(String name, int indexOrHash, int attributes)
         {
@@ -544,7 +537,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * XXX: write docs.
      */
     public void setGetterOrSetter(String name, int index,
-                                  Callable getterOrSetter, boolean isSetter)
+                                  Callable getterOrSeter, boolean isSetter)
     {
         if (name != null && index != 0)
             throw new IllegalArgumentException(name);
@@ -554,9 +547,9 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
                                                SLOT_MODIFY_GETTER_SETTER);
         gslot.checkNotReadonly();
         if (isSetter) {
-            gslot.setter = getterOrSetter;
+            gslot.setter = getterOrSeter;
         } else {
-            gslot.getter = getterOrSetter;
+            gslot.getter = getterOrSeter;
         }
         gslot.value = Undefined.instance;
     }
@@ -587,22 +580,6 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             return result != null ? result : Undefined.instance;
         } else
             return Undefined.instance;
-    }
-
-    /**
-     * Returns whether a property is a getter or a setter
-     * @param name property name
-     * @param index property index
-     * @param setter true to check for a setter, false for a getter
-     * @return whether the property is a getter or a setter
-     */
-    protected boolean isGetterOrSetter(String name, int index, boolean setter) {
-        Slot slot = getSlot(name, index, SLOT_QUERY);
-        if (slot instanceof GetterSlot) {
-            if (setter && ((GetterSlot)slot).setter != null) return true;
-            if (!setter && ((GetterSlot)slot).getter != null) return true;
-        }
-        return false;
     }
 
     void addLazilyInitializedValue(String name, int index,
@@ -695,12 +672,12 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      *
      * See ECMA 8.6.2.6.
      */
-    public Object getDefaultValue(Class<?> typeHint)
+    public Object getDefaultValue(Class typeHint)
     {
         return getDefaultValue(this, typeHint);
     }
     
-    public static Object getDefaultValue(Scriptable object, Class<?> typeHint)
+    public static Object getDefaultValue(Scriptable object, Class typeHint)
     {
         Context cx = null;
         for (int i=0; i < 2; i++) {
@@ -798,21 +775,6 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
 
         return ScriptRuntime.jsDelegatesTo(instance, this);
     }
-    
-    /**
-     * Emulate the SpiderMonkey (and Firefox) feature of allowing
-     * custom objects to avoid detection by normal "object detection"
-     * code patterns. This is used to implement document.all.
-     * See https://bugzilla.mozilla.org/show_bug.cgi?id=412247.
-     * This is an analog to JOF_DETECTING from SpiderMonkey; see
-     * https://bugzilla.mozilla.org/show_bug.cgi?id=248549.
-     * Other than this special case, embeddings should return false.
-     * @return true if this object should avoid object detection
-     * @since 1.7R1
-     */
-    public boolean avoidObjectDetection() {
-        return false;
-    }
 
     /**
      * Custom <tt>==</tt> operator.
@@ -885,9 +847,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      *
      * If the method's name is "jsConstructor", the method is
      * considered to define the body of the constructor. Only one
-     * method of this name may be defined. You may use the varargs forms
-     * for constructors documented in {@link FunctionObject#FunctionObject(String, Member, Scriptable)}
-     * 
+     * method of this name may be defined.
      * If no method is found that can serve as constructor, a Java
      * constructor will be selected to serve as the JavaScript
      * constructor in the following manner. If the class has only one
@@ -925,8 +885,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * @see org.mozilla.javascript.ScriptableObject
      *      #defineProperty(String, Class, int)
      */
-    public static <T extends Scriptable> void defineClass(
-            Scriptable scope, Class<T> clazz)
+    public static void defineClass(Scriptable scope, Class clazz)
         throws IllegalAccessException, InstantiationException,
                InvocationTargetException
     {
@@ -956,8 +915,8 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      *            during execution of methods of the named class
      * @since 1.4R3
      */
-    public static <T extends Scriptable> void defineClass(
-            Scriptable scope, Class<T> clazz, boolean sealed)
+    public static void defineClass(Scriptable scope, Class clazz,
+                                   boolean sealed)
         throws IllegalAccessException, InstantiationException,
                InvocationTargetException
     {
@@ -991,9 +950,8 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      *            during execution of methods of the named class
      * @since 1.6R2
      */
-    public static <T extends Scriptable> String defineClass(
-            Scriptable scope, Class<T> clazz, boolean sealed,
-            boolean mapInheritance)
+    public static String defineClass(Scriptable scope, Class clazz,
+                                     boolean sealed, boolean mapInheritance)
         throws IllegalAccessException, InstantiationException,
                InvocationTargetException
     {
@@ -1006,10 +964,9 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         return name;
     }
 
-    static <T extends Scriptable> BaseFunction buildClassCtor(
-            Scriptable scope, Class<T> clazz,
-            boolean sealed,
-            boolean mapInheritance)
+    static BaseFunction buildClassCtor(Scriptable scope, Class clazz,
+                                       boolean sealed,
+                                       boolean mapInheritance)
         throws IllegalAccessException, InstantiationException,
                InvocationTargetException
     {
@@ -1018,7 +975,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             Method method = methods[i];
             if (!method.getName().equals("init"))
                 continue;
-            Class<?>[] parmTypes = method.getParameterTypes();
+            Class[] parmTypes = method.getParameterTypes();
             if (parmTypes.length == 3 &&
                 parmTypes[0] == ScriptRuntime.ContextClass &&
                 parmTypes[1] == ScriptRuntime.ScriptableClass &&
@@ -1044,8 +1001,8 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         // If we got here, there isn't an "init" method with the right
         // parameter types.
 
-        Constructor<?>[] ctors = clazz.getConstructors();
-        Constructor<?> protoCtor = null;
+        Constructor[] ctors = clazz.getConstructors();
+        Constructor protoCtor = null;
         for (int i=0; i < ctors.length; i++) {
             if (ctors[i].getParameterTypes().length == 0) {
                 protoCtor = ctors[i];
@@ -1064,14 +1021,10 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         // prototype-based inheritance if requested to do so.
         Scriptable superProto = null;
         if (mapInheritance) {
-            Class<? super T> superClass = clazz.getSuperclass();
-            if (ScriptRuntime.ScriptableClass.isAssignableFrom(superClass) &&
-                !Modifier.isAbstract(superClass.getModifiers()))
-            {
-                Class<? extends Scriptable> superScriptable =
-                    extendsScriptable(superClass);
-                String name = ScriptableObject.defineClass(scope, 
-                        superScriptable, sealed, mapInheritance);
+            Class superClass = clazz.getSuperclass();
+            if (ScriptRuntime.ScriptableClass.isAssignableFrom(superClass)
+                    && !Modifier.isAbstract(superClass.getModifiers())) {
+                String name = ScriptableObject.defineClass(scope, superClass, sealed, mapInheritance);
                 if (name != null) {
                     superProto = ScriptableObject.getClassPrototype(scope, name);
                 }
@@ -1116,14 +1069,13 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         ctor.initAsConstructor(scope, proto);
 
         Method finishInit = null;
-        HashSet<String> names = new HashSet<String>(methods.length);
         for (int i=0; i < methods.length; i++) {
             if (methods[i] == ctorMember) {
                 continue;
             }
             String name = methods[i].getName();
             if (name.equals("finishInit")) {
-                Class<?>[] parmTypes = methods[i].getParameterTypes();
+                Class[] parmTypes = methods[i].getParameterTypes();
                 if (parmTypes.length == 3 &&
                     parmTypes[0] == ScriptRuntime.ScriptableClass &&
                     parmTypes[1] == FunctionObject.class &&
@@ -1151,18 +1103,14 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
                 }
             } else if (name.startsWith(getterPrefix)) {
                 prefix = getterPrefix;
+            } else if (name.startsWith(setterPrefix)) {
+                prefix = setterPrefix;
             } else {
-                // note that setterPrefix is among the unhandled names here -
-                // we deal with that when we see the getter
                 continue;
             }
-            String propName = name.substring(prefix.length());
-            if (names.contains(propName)) {
-                throw Context.reportRuntimeError2("duplicate.defineClass.name",
-                        name, propName);
-            }
-            names.add(propName);
             name = name.substring(prefix.length());
+            if (prefix == setterPrefix)
+                continue;   // deal with set when we see get
             if (prefix == getterPrefix) {
                 if (!(proto instanceof ScriptableObject)) {
                     throw Context.reportRuntimeError2(
@@ -1211,14 +1159,6 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         }
 
         return ctor;
-    }
-
-    @SuppressWarnings({"unchecked"})
-    private static <T extends Scriptable> Class<T> extendsScriptable(Class<?> c)
-    {
-        if (ScriptRuntime.ScriptableClass.isAssignableFrom(c))
-            return (Class<T>) c;
-        return null;
     }
 
     /**
@@ -1291,7 +1231,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * @param attributes the attributes of the JavaScript property
      * @see org.mozilla.javascript.Scriptable#put(String, Scriptable, Object)
      */
-    public void defineProperty(String propertyName, Class<?> clazz,
+    public void defineProperty(String propertyName, Class clazz,
                                int attributes)
     {
         int length = propertyName.length();
@@ -1375,7 +1315,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             }
 
             String errorId = null;
-            Class<?>[] parmTypes = getter.getParameterTypes();
+            Class[] parmTypes = getter.getParameterTypes();
             if (parmTypes.length == 0) {
                 if (delegatedForm) {
                     errorId = "msg.obj.getter.parms";
@@ -1418,7 +1358,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             }
 
             String errorId = null;
-            Class<?>[] parmTypes = setter.getParameterTypes();
+            Class[] parmTypes = setter.getParameterTypes();
             if (parmTypes.length == 1) {
                 if (delegatedForm) {
                     errorId = "msg.setter2.expected";
@@ -1461,7 +1401,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * @param attributes the attributes of the new properties
      * @see org.mozilla.javascript.FunctionObject
      */
-    public void defineFunctionProperties(String[] names, Class<?> clazz,
+    public void defineFunctionProperties(String[] names, Class clazz,
                                          int attributes)
     {
         Method[] methods = FunctionObject.getMethodList(clazz);
@@ -1558,19 +1498,6 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      */
     public synchronized void sealObject() {
         if (count >= 0) {
-            // Make sure all LazilyLoadedCtors are initialized before sealing.
-            Slot slot = firstAdded;
-            while (slot != null) {
-                if (slot.value instanceof LazilyLoadedCtor) {
-                    LazilyLoadedCtor initializer = (LazilyLoadedCtor) slot.value;
-                    try {
-                        initializer.init();
-                    } finally {
-                        slot.value = initializer.getValue();
-                    }
-                }
-                slot = slot.orderedNext;
-            }
             count = ~count;
         }
     }
@@ -1934,7 +1861,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      */
     public final Object getAssociatedValue(Object key)
     {
-        Map<Object,Object> h = associatedValues;
+        Hashtable h = associatedValues;
         if (h == null)
             return null;
         return h.get(key);
@@ -1974,22 +1901,24 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * Value can only be associated with the given object and key only once.
      * The method ignores any subsequent attempts to change the already
      * associated value.
-     * <p> The associated values are not serialized.
+     * <p> The associated values are not serilized.
      * @param key key object to select particular value.
      * @param value the value to associate
      * @return the passed value if the method is called first time for the
      * given key or old value for any subsequent calls.
      * @see #getAssociatedValue(Object key)
      */
-    public synchronized final Object associateValue(Object key, Object value)
+    public final Object associateValue(Object key, Object value)
     {
         if (value == null) throw new IllegalArgumentException();
-        Map<Object,Object> h = associatedValues;
+        Hashtable h = associatedValues;
         if (h == null) {
-            h = associatedValues;
-            if (h == null) {
-                h = new HashMap<Object,Object>();
-                associatedValues = h;
+            synchronized (this) {
+                h = associatedValues;
+                if (h == null) {
+                    h = new Hashtable();
+                    associatedValues = h;
+                }
             }
         }
         return Kit.initHash(h, key, value);
@@ -2019,9 +1948,9 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
                 }
                 return nativeGetter.invoke(getterThis, args);
             } else {
-                Function f = (Function)getterObj;
+                Callable f = (Callable)getterObj;
                 Context cx = Context.getContext();
-                return f.call(cx, f.getParentScope(), start,
+                return f.call(cx, ScriptRuntime.getTopCallScope(cx), start,
                               ScriptRuntime.emptyArgs);
             }
         }
@@ -2080,20 +2009,14 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             return true;
         if (slot instanceof GetterSlot) {
             Object setterObj = ((GetterSlot)slot).setter;
-            if (setterObj == null) {
-                if (((GetterSlot)slot).getter != null) {
-                  // Based on TC39 ES3.1 Draft of 9-Feb-2009, 8.12.4, step 2,
-                  // we should throw a TypeError in this case.
-                  throw ScriptRuntime.typeError1("msg.set.prop.no.setter", name);
-                }
-            } else {
+            if (setterObj != null) {
                 Context cx = Context.getContext();
                 if (setterObj instanceof MemberBox) {
                     MemberBox nativeSetter = (MemberBox)setterObj;
-                    Class<?> pTypes[] = nativeSetter.argTypes;
+                    Class pTypes[] = nativeSetter.argTypes;
                     // XXX: cache tag since it is already calculated in
                     // defineProperty ?
-                    Class<?> valueType = pTypes[pTypes.length - 1];
+                    Class valueType = pTypes[pTypes.length - 1];
                     int tag = FunctionObject.getTypeTag(valueType);
                     Object actualArg = FunctionObject.convertArg(cx, start,
                                                                  value, tag);
@@ -2108,8 +2031,8 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
                     }
                     nativeSetter.invoke(setterThis, args);
                 } else {
-                    Function f = (Function)setterObj;
-                    f.call(cx, f.getParentScope(), start,
+                    Callable f = (Callable)setterObj;
+                    f.call(cx, ScriptRuntime.getTopCallScope(cx), start,
                            new Object[] { value });
                 }
                 return true;
@@ -2157,7 +2080,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
                     break lastAccessCheck;
             }
 
-            if (slot.wasDeleted)
+            if (slot.wasDeleted != 0)
                 break lastAccessCheck;
 
             if (accessType == SLOT_MODIFY_GETTER_SETTER &&
@@ -2267,26 +2190,16 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
                         if (accessType == SLOT_MODIFY_GETTER_SETTER &&
                             !(slot instanceof GetterSlot))
                         {
-                            GetterSlot newSlot = new GetterSlot(name,
-                                    indexOrHash, slot.getAttributes());
+                            GetterSlot newSlot = new GetterSlot(name, indexOrHash,
+                                    slot.getAttributes());
                             newSlot.value = slot.value;
                             newSlot.next = slot.next;
-                            // add new slot to linked list
-                            if (lastAdded != null)
-                                lastAdded.orderedNext = newSlot;
-                            if (firstAdded == null)
-                                firstAdded = newSlot;
-                            lastAdded = newSlot;
-                            // add new slot to hash table
                             if (prev == slot) {
                                 slotsLocalRef[insertPos] = newSlot;
                             } else {
                                 prev.next = newSlot;
                             }
-                            // other housekeeping
-                            slot.wasDeleted = true;
-                            slot.value = null;
-                            slot.name = null;
+                            slot.wasDeleted = (byte)1;
                             if (slot == lastAccess) {
                                 lastAccess = REMOVED;
                             }
@@ -2313,13 +2226,6 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
                 if (accessType == SLOT_MODIFY_CONST)
                     newSlot.setAttributes(CONST);
                 ++count;
-                // add new slot to linked list
-                if (lastAdded != null)
-                    lastAdded.orderedNext = newSlot;
-                if (firstAdded == null)
-                    firstAdded = newSlot;
-                lastAdded = newSlot;
-                // add new slot to hash table, return it
                 addKnownAbsentSlot(slotsLocalRef, newSlot, insertPos);
                 return newSlot;
             }
@@ -2344,18 +2250,15 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
                     }
                     if (slot != null && (slot.getAttributes() & PERMANENT) == 0) {
                         count--;
-                        // remove slot from hash table
                         if (prev == slot) {
                             slotsLocalRef[slotIndex] = slot.next;
                         } else {
                             prev.next = slot.next;
                         }
-                        // Mark the slot as removed. It is still referenced
-                        // from the order-added linked list, but will be
-                        // cleaned up later
-                        slot.wasDeleted = true;
-                        slot.value = null;
-                        slot.name = null;
+                        // Mark the slot as removed to handle a case when
+                        // another thread manages to put just removed slot
+                        // into lastAccess cache.
+                        slot.wasDeleted = (byte)1;
                         if (slot == lastAccess) {
                             lastAccess = REMOVED;
                         }
@@ -2401,8 +2304,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * This is an optimization to use when inserting into empty table,
      * after table growth or during deserialization.
      */
-    private static void addKnownAbsentSlot(Slot[] slots, Slot slot,
-                                           int insertPos)
+    private static void addKnownAbsentSlot(Slot[] slots, Slot slot, int insertPos)
     {
         if (slots[insertPos] == null) {
             slots[insertPos] = slot;
@@ -2421,35 +2323,18 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         if (s == null)
             return a;
         int c = 0;
-        Slot slot = firstAdded; 
-        while (slot != null && slot.wasDeleted) {
-            // as long as we're traversing the order-added linked list,
-            // remove deleted slots
-            slot = slot.orderedNext;
-        }
-        firstAdded = slot;
-        if (slot != null) {
-            for (;;) {
+        for (int i=0; i < s.length; i++) {
+            Slot slot = s[i];
+            while (slot != null) {
                 if (getAll || (slot.getAttributes() & DONTENUM) == 0) {
                     if (c == 0)
                         a = new Object[s.length];
-                    a[c++] = slot.name != null
-                                 ? (Object) slot.name
-                                 : Integer.valueOf(slot.indexOrHash);
+                    a[c++] = (slot.name != null ? (Object) slot.name
+                              : new Integer(slot.indexOrHash));
                 }
-                Slot next = slot.orderedNext;
-                while (next != null && next.wasDeleted) {
-                    // remove deleted slots
-                    next = next.orderedNext;
-                }
-                slot.orderedNext = next;
-                if (next == null) {
-                    break;
-                }
-                slot = next;
+                slot = slot.next;
             }
         }
-        lastAdded = slot;
         if (c == a.length)
             return a;
         Object[] result = new Object[c];
@@ -2470,22 +2355,14 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             out.writeInt(0);
         } else {
             out.writeInt(slots.length);
-            Slot slot = firstAdded; 
-            while (slot != null && slot.wasDeleted) {
-                // as long as we're traversing the order-added linked list,
-                // remove deleted slots
-                slot = slot.orderedNext;
-            }
-            firstAdded = slot;
-            while (slot != null) {
-                out.writeObject(slot);
-                Slot next = slot.orderedNext;
-                while (next != null && next.wasDeleted) {
-                    // remove deleted slots
-                    next = next.orderedNext;
+            for (int i = 0; i < slots.length; ++i) {
+                Slot slot = slots[i];
+                while (slot != null) {
+                    out.writeObject(slot);
+                    slot = slot.next;
+                    if (--objectsCount == 0)
+                        return;
                 }
-                slot.orderedNext = next;
-                slot = next;
             }
         }
     }
@@ -2504,17 +2381,10 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
                 // "this" was sealed
                 objectsCount = ~objectsCount;
             }
-            Slot prev = null;
-            for (int i=0; i != objectsCount; ++i) {
-                lastAdded = (Slot)in.readObject();
-                if (i==0) {
-                    firstAdded = lastAdded;
-                } else {
-                    prev.orderedNext = lastAdded;
-                }
-                int slotIndex = getSlotIndex(tableSize, lastAdded.indexOrHash);
-                addKnownAbsentSlot(slots, lastAdded, slotIndex);
-                prev = lastAdded;
+            for (int i = 0; i != objectsCount; ++i) {
+                Slot slot = (Slot)in.readObject();
+                int slotIndex = getSlotIndex(tableSize, slot.indexOrHash);
+                addKnownAbsentSlot(slots, slot, slotIndex);
             }
         }
     }
